Calculation engine - add calculation with indep list

--- a/src/CalculationFields/i18n/CalculationFields.translations_fr.txt
+++ b/src/CalculationFields/i18n/CalculationFields.translations_fr.txt
@@ -23,10 +23,14 @@ label_objecttype = Objet Type
 label_associationtype = Association Type
 label_pt_operand = Opérandes
 label_pt_operand_intersection = L''opérande est sur l''intersection
-label_pt_operand_scriptname = Scriptname de la propriété d'intersection
+label_pt_operand_scriptname = Scriptname de la propriété d''intersection
 label_pt_result = Propriété résultat
 label_pt_filter = Filtres (ET)
 label_pt_filter_column_property = Propriété
 label_pt_filter_column_operator = Opérateur
 label_pt_filter_column_value = Valeur
 label_pt_filter_add_new = Ajouter filtre
+label_ot_result = Objet Type Résultat
+label_result_create_new = Créer une nouvelle instance
+label_result_pt_identifier = Propriété identifiant
+label_result_pt_idenfier_value = Valeur de la propriété identifiant
