Correct translation mistakes

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -9,7 +9,7 @@ label_order = Order
 typeoperation_CalculateOnSelf = Calculate on object
 typeoperation_CalculateWithList = Calculate based on values of associated objects
 typeoperation_CalculateWithIndependantList = Calculate base on value of an independant list of objects
-typeoperation_Update = Update an object
+typeoperation_CalculateUpdate = Update an object
 label_operation_operator = Operator
 label_operation_operator_sum = Sum
 label_operation_operator_mult = Mult
