--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -9,7 +9,7 @@ label_order = Ordre
 typeoperation_CalculateOnSelf = Calcul sur l''objet
 typeoperation_CalculateWithList = Calcul sur les objets associés
 typeoperation_CalculateWithIndependantList = Calcul sur une liste indépendante
-typeoperation_Update = Mettre à jour un objet
+typeoperation_CalculateUpdate = Mettre à jour un objet
 label_operation_operator = Opérateur
 label_operation_operator_sum = Somme
 label_operation_operator_mult = Multiplication
