--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -30,7 +30,7 @@ label_pt_filter_column_property = Propriété
 label_pt_filter_column_operator = Opérateur
 label_pt_filter_column_value = Valeur
 label_pt_filter_add_new = Ajouter filtre
-label_pt_value_add_new = Ajouter valeur
+label_pt_values_add_new = Ajouter valeur
 label_pt_new_values = Valeurs
 label_ot_result = Objet Type Résultat
 label_result_create_new = Créer une nouvelle instance
