--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -30,7 +30,7 @@ label_pt_filter_column_property = Property
 label_pt_filter_column_operator = Operator
 label_pt_filter_column_value = Value
 label_pt_filter_add_new = Add filter
-label_pt_value_add_new = Ajouter valeur
+label_pt_values_add_new = Ajouter valeur
 label_pt_new_values = Valeurs
 label_ot_result = Result Object Type
 label_result_create_new = Create new object
