--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -53,3 +53,7 @@ label_property_add = Ajouter une Propriété
 label_property_to_select = Propriétés
 label_association_add = Ajouter une association
 label_associations = Associations
+
+label_pt_new_associations = Créer association
+label_pt_new_association_scriptname = Scriptname de l''association
+label_pt_new_association_target_id = Id de l''objet à associer
