--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -10,6 +10,7 @@ typeoperation_CalculateOnSelf = Calculate on object
 typeoperation_CalculateWithList = Calculate based on values of associated objects
 typeoperation_CalculateWithIndependantList = Calculate base on value of an independant list of objects
 typeoperation_CalculateUpdate = Update an object
+typeoperation_CalculateHistory = Historic
 label_operation_operator = Operator
 label_operation_operator_sum = Sum
 label_operation_operator_mult = Mult
