--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -10,6 +10,8 @@ typeoperation_CalculateOnSelf = Calcul sur l''objet
 typeoperation_CalculateWithList = Calcul sur les objets associés
 typeoperation_CalculateWithIndependantList = Calcul sur une liste indépendante
 typeoperation_CalculateUpdate = Mettre à jour un objet
+typeoperation_CalculateHistory = Historisation
+
 label_operation_operator = Opérateur
 label_operation_operator_sum = Somme
 label_operation_operator_mult = Multiplication
